send the access token in a x-access-token header